src/test/deca/syntax/invalid/inst/test_inst_add_string_to_int.deca
// Description:
//    tests de programme syntaxiquement incorrects : if sans crochet
//
// Resultats:
//    Ligne 13: missing '{' at 'println'
//    
//
// Historique:
//    cree le 01/01/2024

{
        int i = 0 + ;
        
}
